dossier-docs/src/adoc/administration/9.1/chapters/options/_02_options_signature.adoc
[[_03_options_signature]]
=== Signature

[cols="4a,3a,1a,2a",options="header"]
|===
|Code|Description|Type|Valeur par défaut (et/ou _autres valeurs possibles_)
|*sign.airs.signature.enabled*|Mode parapheur/signature OTP activé|Boolean|[red]#false#
|*sign.airs.signature.auto.create.fields*|Création automatique des champs nécessaires à la signature/parapheur|Boolean|[green]#true#
|*sign.airs.signature.allow.multiple.files*|Autoriser l'envoi multiple de documents en signature|Boolean|[green]#true#
|*signBook.auto.check.folder.status.in.view.enabled*|Relève automatique de DossierExterne (Signature/parapheur) en accédant à la fiche|Boolean|[red]#false#
|*signBook.autoRetrieve.folder.enabled*|Relève automatique des dossiers du parapheur|Boolean|[green]#true#
|*signBook.autoRetrive.folder.JobInterval*|Fréquence de la relève des documents dans le parapheur (en ms)|Integer|*7200000*
|*signBook.emitter.force.empty*|Envoi anonyme|Boolean|[red]#false#
|*signBook.emitter.generic.email*|Configuration d'un même compte pour tous les envois|String|[blue]#null#
|*sign.airs.signatoryField*|Code du champ AIRS rattaché à la signature|String|[blue]#null#
|*sign.airs.signAttachmentIdField*|ID du champ AIRS / Pièce jointe rattaché à la signature|String|[blue]#null#
|*sign.airs.signedAttachmentIdsField*|ID du champ AIRS / Pièce jointe rattaché à la signature|String|[blue]#null#
|*sign.viewunit.allow.edition.if.signature.in.progress*|Autoriser l'édition/modification du document lorsque un dossier de signature est en cours|Boolean|[green]#true#
|===